localization/v2.6.x/site/pt/tutorials/tutorials-overview.md
---
id: tutorials-overview.md
summary: Esta página apresenta uma lista de tutoriais para interagir com o Milvus.
title: Visão geral dos tutoriais
---
<h1 id="Tutorials-Overview" class="common-anchor-header">Visão geral dos tutoriais<button data-href="#Tutorials-Overview" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h1><p>Esta página fornece uma lista de tutoriais para interagir com o Milvus.</p>
<table>
<thead>
<tr><th>Tutoriais</th><th>Caso de uso</th><th>Recursos relacionados ao Milvus</th></tr>
</thead>
<tbody>
<tr><td><a href="/docs/pt/build-rag-with-milvus.md">Construir RAG com Milvus</a></td><td>RAG</td><td>pesquisa vetorial</td></tr>
<tr><td><a href="/docs/pt/how_to_enhance_your_rag.md">RAG avançado</a></td><td>RAG</td><td>pesquisa vetorial</td></tr>
<tr><td><a href="/docs/pt/full_text_search_with_milvus.md">Pesquisa de texto integral com LangChain e Milvus</a></td><td>Início rápido</td><td>Pesquisa de texto integral</td></tr>
<tr><td><a href="/docs/pt/hybrid_search_with_milvus.md">Pesquisa híbrida com Milvus</a></td><td>Pesquisa híbrida</td><td>pesquisa híbrida, multi-vetor, incorporação densa, incorporação esparsa</td></tr>
<tr><td><a href="/docs/pt/image_similarity_search.md">Pesquisa de imagens com Milvus</a></td><td>Pesquisa semântica</td><td>pesquisa vetorial, campo dinâmico</td></tr>
<tr><td><a href="/docs/pt/multimodal_rag_with_milvus.md">RAG multimodal com Milvus</a></td><td>RAG</td><td>pesquisa vetorial, campo dinâmico</td></tr>
<tr><td><a href="/docs/pt/multimodal_rag_with_milvus.md">Pesquisa multimodal utilizando multi-vectores</a></td><td>Pesquisa semântica</td><td>multi-vetorial, pesquisa híbrida</td></tr>
<tr><td><a href="/docs/pt/graph_rag_with_milvus.md">RAG de grafos com Milvus</a></td><td>RAG</td><td>pesquisa em grafos</td></tr>
<tr><td><a href="/docs/pt/contextual_retrieval_with_milvus.md">Recuperação contextual com Milvus</a></td><td>Início rápido</td><td>pesquisa vetorial</td></tr>
<tr><td><a href="/docs/pt/hdbscan_clustering_with_milvus.md">Agrupamento HDBSCAN com Milvus</a></td><td>Início rápido</td><td>pesquisa vetorial</td></tr>
<tr><td><a href="/docs/pt/use_ColPali_with_milvus.md">Usar ColPali para recuperação multimodal com Milvus</a></td><td>Início rápido</td><td>pesquisa vetorial</td></tr>
<tr><td><a href="/docs/pt/quickstart_with_attu.md">Início rápido com Attu</a></td><td>Início rápido</td><td>pesquisa vetorial</td></tr>
<tr><td><a href="/docs/pt/use-async-milvus-client-with-asyncio.md">Utilizar AsyncMilvusClient com asyncio</a></td><td>AsyncIO</td><td>AsyncIO, pesquisa vetorial</td></tr>
<tr><td><a href="/docs/pt/text_image_search.md">Pesquisa de texto para imagem com Milvus</a></td><td>Pesquisa semântica</td><td>pesquisa vetorial</td></tr>
<tr><td><a href="/docs/pt/vector_visualization.md">Visualização vetorial</a></td><td>Início rápido</td><td>pesquisa vetorial</td></tr>
<tr><td><a href="/docs/pt/movie_recommendation_with_milvus.md">Recomendação de filmes com Milvus</a></td><td>Sistema de recomendação</td><td>pesquisa vetorial</td></tr>
<tr><td><a href="/docs/pt/funnel_search_with_matryoshka.md">Pesquisa de funil com Matryoshka Embeddings</a></td><td>Início rápido</td><td>pesquisa vetorial</td></tr>
<tr><td><a href="/docs/pt/question_answering_system.md">Sistema de resposta a perguntas</a></td><td>Resposta a perguntas</td><td>pesquisa vetorial</td></tr>
<tr><td><a href="/docs/pt/recommendation_system.md">Sistema de recomendação</a></td><td>Sistema de Recomendação</td><td>pesquisa vetorial</td></tr>
<tr><td><a href="/docs/pt/video_similarity_search.md">Pesquisa de similaridade de vídeo</a></td><td>Pesquisa semântica</td><td>pesquisa vetorial</td></tr>
<tr><td><a href="/docs/pt/audio_similarity_search.md">Pesquisa de similaridade de áudio</a></td><td>Pesquisa Semântica</td><td>pesquisa vetorial</td></tr>
<tr><td><a href="/docs/pt/dna_sequence_classification.md">Classificação de ADN</a></td><td>Classificação</td><td>pesquisa vetorial</td></tr>
<tr><td><a href="/docs/pt/text_search_engine.md">Motor de pesquisa de texto</a></td><td>Pesquisa semântica</td><td>pesquisa vetorial</td></tr>
<tr><td><a href="/docs/pt/image_deduplication_system.md">Deduplicação de imagens</a></td><td>Deduplicação</td><td>pesquisa vetorial</td></tr>
<tr><td><a href="/docs/pt/generating_milvus_query_filter_expressions.md">Geração de expressões de filtro de consulta Milvus com modelos de linguagem de grande dimensão</a></td><td>Filtragem de metadados</td><td>pesquisa vetorial</td></tr>
</tbody>
</table>
